--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,69 @@ dist-ssr
 *.sln
 *.sw?
 openwrt-tofu/.terraform/*
+
+# Gradle files
+.gradle/
+build/
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+# Log/OS Files
+*.log
+
+# Android Studio generated files and folders
+captures/
+.externalNativeBuild/
+.cxx/
+*.aab
+*.apk
+output-metadata.json
+
+# IntelliJ
+*.iml
+.idea/
+misc.xml
+deploymentTargetDropDown.xml
+render.experimental.xml
+
+# Keystore files
+*.jks
+*.keystore
+
+# Google Services (e.g. APIs or Firebase)
+google-services.json
+
+# Android Profiling
+*.hprof
+
+.idea/
+dist/
+types/
+.sourcemaps
+xcuserdata/
+node_modules/
+Pods/
+*.map
+.DS_Store
+Podfile.lock
+Build/*
+build/
+Index/
+.*.sw*
+android-template.iml
+!/build/.npmkeep
+lerna-debug.log
+local.properties
+contents.xcworkspacedata
+android-template/.gradle/
+android-template/app/app.iml
+.gradle/
+.settings/
+.project
+.env
+capacitor-build.log
+
+# Carthage and Carthage-built binaries
+Carthage
+*.xcframework.zip
